# prizepicks_ev_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  docker-compose.yml  pyproject.toml  the_odds_api_data_example_event_response.json  the_odds_api_data_example_response.json
prizepicks_ev_bot/: logging_config.py  models.py  settings.py
prizepicks_ev_bot/cli/: main.py
prizepicks_ev_bot/ingestion/: base_client.py  prizepicks_client.py  stats_map.py  the_odds_api_client.py
tests/: test_pp.py  test_setup.py  test_the_odds.py
