[project]
name = "prizepicks_ev_bot"
version = "0.1.0"
description = "OddsJam-style +EV basketball betting analyzer for PrizePicks"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # HTTP
    "httpx>=0.27.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",

    # Caching
    "redis>=5.0.4",

    # Scheduler
    "apscheduler>=3.10.4",

    # NBA data
    "nba_api>=1.4.1",

    # Fuzzy name matching
    "rapidfuzz>=3.9.0",

    # CLI
    "typer>=0.12.3",
    "rich>=13.7.0",

    # Config
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",

    # Discord alerts
    "discord-webhook>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.4.7",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
]

[project.scripts]
ppev = "prizepicks_ev_bot.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prizepicks_ev_bot"]

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC"]
lint.ignore = ["ANN101", "ANN102"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=prizepicks_ev_bot --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "*/migrations/*"]
